# Price

./: .env.example  .gitignore  HANDOVER.md  PROMOTION_DECISION.md  README.md  _append_v5_diragn.sh  _append_v5_results.sh  _roundtrip_v5.sh  pyproject.toml  requirements.txt
localdata/: candidate_leaderboard.csv  candidate_leaderboard_15m_rth_liquid236.csv  candidate_leaderboard_1d_tiingo_liquid236.csv  candidate_leaderboard_1h_rth_liquid236.csv  cooldown_journal.json  date_range_diagnostics.csv  discovered_slices.csv  discovered_slices_15m_rth_liquid236.csv  discovered_slices_1d_tiingo_liquid236.csv  discovered_slices_1h_rth_liquid236.csv  explicit_allowlist.json  live_forward_returns.csv  live_forward_returns_crypto.csv  ml_candidate_leaderboard_tier1_1d_tiingo.csv  ml_candidate_slices.csv  ml_candidate_slices_tier1_1d_tiingo.csv  monitored_edge_metrics.csv  monitored_slices.csv  monitored_slices_crypto.csv  monitored_slices_futures.csv  paper_trade_log.csv  paper_trade_log_crypto.csv  paper_trade_log_futures.csv  rth_filter_15m_cleanup_report.csv  stop_state.json  stop_state_crypto.json  stop_state_futures.json  stopout_journal.json  tier1_corrected_largest_jumps.csv  tier1_corrected_quality_summary.csv  tier1_corrected_signal_hits.csv  trade_journal.csv  trade_journal_crypto.csv  trade_journal_futures.csv  universe_cache.json  validated_slices.csv  validated_slices_15m_rth_liquid236.csv  validated_slices_1d_tiingo_liquid236.csv  walk_forward_diagnostics.csv
scripts/: attribute_pnl.py  build_warehouse.py  capture_bars.py  delta_spike_guard.py  discover_slices.py  fetch_universe.py  live_forward_returns.py  ml_to_slices.py  paper_trade.py  prune_warehouse.py  research_crypto.py  research_futures.py  research_lifecycle.py  research_merge.py  research_observations.py  research_refresh.py  research_regime_coverage.py  research_shard.py  survey_assets.py  sync_monitored.py  sync_monitored_crypto.py  system_health.py  validate_slices.py
tests/: privacy_boundary_test.sh  test_allocation.py  test_alpaca_enum_normalization.py  test_attribution.py  test_autonomous_stopout_journaling.py  test_broker_order_backfill.py  test_close_position_settle_race.py  test_cost_model.py  test_cross_asset.py  test_direction_agnostic.py  test_discovery.py  test_external_states.py  test_features.py  test_features_cache.py  test_futures_ingestion.py  test_futures_metadata.py  test_leverage.py  test_leverage_gate.py  test_live_forward_returns.py  test_market_profiles.py  test_ml_discovery.py  test_paper_trade_profit_exit.py  test_paper_trade_sizing_equity.py  test_paper_trade_stop_audit.py  test_position_manager.py  test_position_manager_profit.py  test_position_manager_r_gate.py  test_position_manager_recovery.py  (+25 more)
(+133 files in other folders)
