[project]
name = "price"
version = "0.1.0"
description = "Price-first market-state discovery lab"
requires-python = ">=3.11"
dependencies = [
  "alpaca-py==0.43.5",
  "pandas==2.2.3",
  "duckdb==1.5.4",
  "pyarrow==24.0.0",
  "python-dotenv==1.2.2",
  "pandas_market_calendars==5.4.0",
  "requests==2.33.0",
  "lightgbm==4.6.0",
  "numpy==2.4.6",
  "scipy==1.17.1",
]

[project.optional-dependencies]
dev = [
  "pytest==9.0.3",
  "ruff==0.15.20",
]

[build-system]
requires = ["setuptools==80.9.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 100

[tool.pyrefly]
# Tell the static type checker where to resolve non-package imports.
# `src/` is the inferred import root (from [tool.setuptools.packages.find]);
# `scripts/` holds runnable scripts imported by tests (validate_slices,
# live_forward_returns) via sys.path insertion that a static checker cannot
# follow. Tests import these as bare modules (e.g. `import validate_slices`),
# consistent across all test files.
search-path = ["src", "scripts"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
